2009-01-31  Bart Veer <bartv@ecoscentric.com>

	* cdl/hal_arm_lpc2xxx_olpcl2294.cdl: update compiler flags for gcc 4.x

2008-12-03  Sergei Gavrikov <sergei.gavrikov@gmail.com>

	* misc/redboot_*.ecm: Rebuilt since target uses flash_olpcx2294_v2
	driver.

2008-08-31  Sergei Gavrikov <sergei.gavrikov@gmail.com>

	* LPC-L2294 development board package
	* cdl/hal_arm_lpc2xxx_olpcl2294.cdl
	* include/hal_platform_setup.h
	* include/pkgconf/mlt_arm_lpc2xxx_olpcl2294_ram.h
	* include/pkgconf/mlt_arm_lpc2xxx_olpcl2294_ram.ldi
	* include/pkgconf/mlt_arm_lpc2xxx_olpcl2294_rom.h
	* include/pkgconf/mlt_arm_lpc2xxx_olpcl2294_rom.ldi
	* include/plf_io.h
	* misc/redboot_ROM.ecm
	* src/olpcl2294_misc.c
	* src/redboot_cmds.c

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2008 Free Software Foundation, Inc.                        
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     
// the Free Software Foundation; either version 2 or (at your option) any   
// later version.                                                           
//
// This program is distributed in the hope that it will be useful, but      
// WITHOUT ANY WARRANTY; without even the implied warranty of               
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU        
// General Public License for more details.                                 
//
// You should have received a copy of the GNU General Public License        
// along with this program; if not, write to the                            
// Free Software Foundation, Inc., 51 Franklin Street,                      