@@ -56,7 +56,7 @@
 #ifndef __ASSEMBLER__
 extern void hal_plf_hardware_init(void);
 #define HAL_PLF_HARDWARE_INIT() \
-	    hal_plf_hardware_init()
+            hal_plf_hardware_init()
 
 #endif // __ASSEMBLER__
 
